--- a/main.html
+++ b/main.html
@@ -899,7 +899,7 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Artificial Intelligence Tools</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
-                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="openai.png" data-mobile="openai.png">
+                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🤖</div>
@@ -907,7 +907,7 @@
                         <p class="card-sub-heading">GPT-4.5, Codex, DALL·E 3</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="claude.png" data-mobile="claude.png">
+                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🖋️</div>
@@ -915,7 +915,7 @@
                         <p class="card-sub-heading">Claude 2, Claude 3 (Opus, Sonnet, Haiku)</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="googleAIModal" data-keywords="google gemini gato sima" data-desktop="gemini.png" data-mobile="gemini.png">
+                <div class="card" data-modal-target="googleAIModal" data-keywords="google gemini gato sima" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🧠</div>
@@ -923,7 +923,7 @@
                         <p class="card-sub-heading">Gemini, Gato, SIMA</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="metaAIModal" data-keywords="meta llama 2 llama 3.2 vision llama 4" data-desktop="metaai.png" data-mobile="metaai.png">
+                <div class="card" data-modal-target="metaAIModal" data-keywords="meta llama 2 llama 3.2 vision llama 4" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🌐</div>
@@ -931,7 +931,7 @@
                         <p class="card-sub-heading">LLaMA 2, LLaMA 3.2 Vision</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="mistralAIModal" data-keywords="mistral mixtral mistral small medium" data-desktop="mistrelai.png" data-mobile="mistrelai.png">
+                <div class="card" data-modal-target="mistralAIModal" data-keywords="mistral mixtral mistral small medium" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🌪️</div>
@@ -939,7 +939,7 @@
                         <p class="card-sub-heading">Mixtral, Mistral Small/Medium</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="deepseekModal" data-keywords="deepseek r1 deepseek v3" data-desktop="deepseekai.png" data-mobile="deepseekai.png">
+                <div class="card" data-modal-target="deepseekModal" data-keywords="deepseek r1 deepseek v3" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🔍</div>
@@ -947,7 +947,7 @@
                         <p class="card-sub-heading">R1, DeepSeek‑V3 variants</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="amazonAIModal" data-keywords="amazon nova micro lite pro text image video" data-desktop="amazonnovaai.png" data-mobile="amazonnovaai.png">
+                <div class="card" data-modal-target="amazonAIModal" data-keywords="amazon nova micro lite pro text image video" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛒</div>
@@ -955,7 +955,7 @@
                         <p class="card-sub-heading">Nova Micro, Lite, Pro</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="xAIModal" data-keywords="xai grok 4" data-desktop="grokai.png" data-mobile="grokai.png">
+                <div class="card" data-modal-target="xAIModal" data-keywords="xai grok 4" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">✖️</div>
@@ -963,7 +963,7 @@
                         <p class="card-sub-heading">Grok 4</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="alibabaModal" data-keywords="alibaba qwen 2.5" data-desktop="alibabaquen.png" data-mobile="alibabaquen.png">
+                <div class="card" data-modal-target="alibabaModal" data-keywords="alibaba qwen 2.5" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">📦</div>
@@ -971,7 +971,7 @@
                         <p class="card-sub-heading">Qwen 2.5</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="perplexityModal" data-keywords="perplexity ai answer engine conversational search" data-desktop="perplexityai.png" data-mobile="perplexityai.png">
+                <div class="card" data-modal-target="perplexityModal" data-keywords="perplexity ai answer engine conversational search" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">❓</div>
@@ -979,7 +979,7 @@
                         <p class="card-sub-heading">Conversational Search</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="aiUtilitiesModal" data-keywords="prompt engineering generateprompt midjourney prompts runwayml elevenlabs" data-desktop="gpai.png" data-mobile="gpai.png">
+                <div class="card" data-modal-target="aiUtilitiesModal" data-keywords="prompt engineering generateprompt midjourney prompts runwayml elevenlabs" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛠️</div>
@@ -987,7 +987,7 @@
                         <p class="card-sub-heading">Prompting, Video, Audio</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="othersAIModal" data-keywords="others minimax pixtral" data-desktop="othersai.png" data-mobile="othersai.png">
+                <div class="card" data-modal-target="othersAIModal" data-keywords="others minimax pixtral" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">✨</div>
