--- a/main.html
+++ b/main.html
@@ -111,7 +111,7 @@
 
             /* --- START: CUSTOM BACKGROUND IMAGE STYLES --- */
             /* Note: 'imap.png' should be available in the environment, or replace with a working URL */
-            background-image: url('imap.png');
+            background-image: url('allai.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
