--- a/main.html
+++ b/main.html
@@ -1003,7 +1003,7 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All Private Jobs Guide</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
-                <div class="card" data-modal-target="itSoftwareModal" data-keywords="it software jobs software engineer web developer app developer data scientist analyst ai ml engineer cybersecurity cloud engineer ui ux designer tech support engineer" data-desktop="itsoftys.png" data-mobile="itsoftys.png">
+                <div class="card" data-modal-target="itSoftwareModal" data-keywords="it software jobs software engineer web developer app developer data scientist analyst ai ml engineer cybersecurity cloud engineer ui ux designer tech support engineer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">👨‍💻</div>
@@ -1011,7 +1011,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="salesMarketingModal" data-keywords="sales marketing jobs sales executive manager digital marketing specialist seo sem analyst social media brand manager content marketing executive product marketing manager" data-desktop="salesmarketing.png" data-mobile="salesmarketing.png">
+                <div class="card" data-modal-target="salesMarketingModal" data-keywords="sales marketing jobs sales executive manager digital marketing specialist seo sem analyst social media brand manager content marketing executive product marketing manager" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">📈</div>
@@ -1019,7 +1019,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="financeAccountingModal" data-keywords="finance accounting jobs accountant financial analyst chartered accountant ca investment banker audit executive payroll manager tax consultant" data-desktop="fmacc.png" data-mobile="fmacc.png">
+                <div class="card" data-modal-target="financeAccountingModal" data-keywords="finance accounting jobs accountant financial analyst chartered accountant ca investment banker audit executive payroll manager tax consultant" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">💰</div>
@@ -1027,7 +1027,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="hrJobsModal" data-keywords="human resource hr jobs hr executive talent acquisition specialist hr manager training and development officer payroll and compliance officer employee relations manager" data-desktop="humainresaurce.png" data-mobile="humainresaurce.png">
+                <div class="card" data-modal-target="hrJobsModal" data-keywords="human resource hr jobs hr executive talent acquisition specialist hr manager training and development officer payroll and compliance officer employee relations manager" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🧑‍💼</div>
@@ -1035,7 +1035,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="customerSupportModal" data-keywords="customer support bpo kpo customer care executive technical support chat process executive voice process agent team leader process trainer" data-desktop="customerkpobpo.png" data-mobile="customerkpobpo.png">
+                <div class="card" data-modal-target="customerSupportModal" data-keywords="customer support bpo kpo customer care executive technical support chat process executive voice process agent team leader process trainer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">📞</div>
@@ -1043,7 +1043,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="bankingInsuranceModal" data-keywords="banking insurance sector jobs relationship manager loan officer credit analyst branch manager insurance advisor underwriter" data-desktop="bankinginsurance.png" data-mobile="bankinginsurance.png">
+                <div class="card" data-modal-target="bankingInsuranceModal" data-keywords="banking insurance sector jobs relationship manager loan officer credit analyst branch manager insurance advisor underwriter" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🏦</div>
@@ -1051,7 +1051,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="healthcarePharmaModal" data-keywords="healthcare pharma medical jobs medical representative mr lab technician pharmacist nurse doctor clinical research associate healthcare admin" data-desktop="healthcaremedical.png" data-mobile="healthcaremedical.png">
+                <div class="card" data-modal-target="healthcarePharmaModal" data-keywords="healthcare pharma medical jobs medical representative mr lab technician pharmacist nurse doctor clinical research associate healthcare admin" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">⚕️</div>
@@ -1059,7 +1059,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="educationTrainingModal" data-keywords="education training jobs private school teacher online tutor corporate trainer admission counselor education consultant e-learning content developer" data-desktop="edutraining.png" data-mobile="edutraining.png">
+                <div class="card" data-modal-target="educationTrainingModal" data-keywords="education training jobs private school teacher online tutor corporate trainer admission counselor education consultant e-learning content developer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🧑‍🏫</div>
@@ -1067,7 +1067,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="engineeringSectorModal" data-keywords="engineering sector jobs mechanical engineer civil engineer electrical engineer design engineer cad production manufacturing engineer site engineer" data-desktop="engineeringsector.png" data-mobile="engineeringsector.png">
+                <div class="card" data-modal-target="engineeringSectorModal" data-keywords="engineering sector jobs mechanical engineer civil engineer electrical engineer design engineer cad production manufacturing engineer site engineer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">⚙️</div>
@@ -1075,7 +1075,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="manufacturingProductionModal" data-keywords="manufacturing production jobs machine operator plant supervisor quality control executive production manager maintenance technician" data-desktop="manufactioring.png" data-mobile="manufactioring.png">
+                <div class="card" data-modal-target="manufacturingProductionModal" data-keywords="manufacturing production jobs machine operator plant supervisor quality control executive production manager maintenance technician" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🏭</div>
@@ -1083,7 +1083,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="logisticsSupplyChainModal" data-keywords="logistics supply chain jobs logistics executive warehouse manager inventory controller procurement specialist supply chain analyst fleet manager" data-desktop="logisticssupplychain.png" data-mobile="logisticssupplychain.png">
+                <div class="card" data-modal-target="logisticsSupplyChainModal" data-keywords="logistics supply chain jobs logistics executive warehouse manager inventory controller procurement specialist supply chain analyst fleet manager" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🚚</div>
@@ -1091,7 +1091,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="realEstateModal" data-keywords="real estate construction jobs sales executive site supervisor civil engineer architect property advisor interior designer" data-desktop="constructionestate.png" data-mobile="constructionestate.png">
+                <div class="card" data-modal-target="realEstateModal" data-keywords="real estate construction jobs sales executive site supervisor civil engineer architect property advisor interior designer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🏡</div>
@@ -1099,7 +1099,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="retailEcommerceModal" data-keywords="retail e-commerce jobs store manager cashier billing executive visual merchandiser inventory customer relationship executive delivery executive" data-desktop="retailecommerce.png" data-mobile="retailecommerce.png">
+                <div class="card" data-modal-target="retailEcommerceModal" data-keywords="retail e-commerce jobs store manager cashier billing executive visual merchandiser inventory customer relationship executive delivery executive" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛍️</div>
@@ -1107,7 +1107,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="mediaEntertainmentModal" data-keywords="media advertising entertainment jobs content writer copywriter graphic designer video editor creative director journalist photographer cinematographer pr executive" data-desktop="mediaadvertisingentertainment.png" data-mobile="mediaadvertisingentertainment.png">
+                <div class="card" data-modal-target="mediaEntertainmentModal" data-keywords="media advertising entertainment jobs content writer copywriter graphic designer video editor creative director journalist photographer cinematographer pr executive" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🎬</div>
@@ -1115,7 +1115,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="legalLawModal" data-keywords="legal law jobs legal advisor corporate lawyer contract manager legal associate compliance officer" data-desktop="legallow.png" data-mobile="legallow.png">
+                <div class="card" data-modal-target="legalLawModal" data-keywords="legal law jobs legal advisor corporate lawyer contract manager legal associate compliance officer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">⚖️</div>
@@ -1123,7 +1123,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="hospitalityTravelModal" data-keywords="hospitality travel tourism jobs hotel manager front office executive travel agent chef cook housekeeping supervisor tour guide event manager" data-desktop="hospitalitytraveltourisam.png" data-mobile="hospitalitytraveltourisam.png">
+                <div class="card" data-modal-target="hospitalityTravelModal" data-keywords="hospitality travel tourism jobs hotel manager front office executive travel agent chef cook housekeeping supervisor tour guide event manager" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🏨</div>
@@ -1131,7 +1131,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="securityServicesModal" data-keywords="security services jobs private security guard cctv operator security supervisor bouncer" data-desktop="securityserrvices.png" data-mobile="securityserrvices.png">
+                <div class="card" data-modal-target="securityServicesModal" data-keywords="security services jobs private security guard cctv operator security supervisor bouncer" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛡️</div>
@@ -1139,7 +1139,7 @@
                         <p class="card-sub-heading"></p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="drivingDeliveryModal" data-keywords="driving delivery field jobs cab driver ola uber delivery executive zomato swiggy field sales executive service technician ac fridge" data-desktop="drivingdeliveryfilds.png" data-mobile="drivingdeliveryfilds.png">
+                <div class="card" data-modal-target="drivingDeliveryModal" data-keywords="driving delivery field jobs cab driver ola uber delivery executive zomato swiggy field sales executive service technician ac fridge" data-desktop=".png" data-mobile=".png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🚗</div>
