--- a/main.html
+++ b/main.html
@@ -2236,7 +2236,7 @@
     <div id="itSoftwareModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">IT और Software Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">IT/Software Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2254,7 +2254,7 @@
     <div id="salesMarketingModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Sales और Marketing</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Sales/Marketing</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2271,7 +2271,7 @@
     <div id="financeAccountingModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Finance और Accounting Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Finance/Accounting</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2288,7 +2288,7 @@
     <div id="hrJobsModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Human Resource (HR) Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Human Resource</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2304,7 +2304,7 @@
     <div id="customerSupportModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Customer Support / BPO / KPO</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Customer/BPO/KPO</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2320,7 +2320,7 @@
     <div id="bankingInsuranceModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Banking और Insurance Sector</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Banking/Insurance</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2336,7 +2336,7 @@
     <div id="healthcarePharmaModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Healthcare / Pharma / Medical Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Healthcare/Pharma</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2353,7 +2353,7 @@
     <div id="educationTrainingModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Education और Training</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Education/Training</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2369,7 +2369,7 @@
     <div id="engineeringSectorModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Engineering Sector</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Engineering Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2385,7 +2385,7 @@
     <div id="manufacturingProductionModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Manufacturing & Production</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Manufacturing Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2400,7 +2400,7 @@
     <div id="logisticsSupplyChainModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Logistics और Supply Chain</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Logistics Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2416,7 +2416,7 @@
     <div id="realEstateModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Real Estate और Construction</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">RealEstate/Construction</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2432,7 +2432,7 @@
     <div id="retailEcommerceModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Retail / E-commerce Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Retail/E-commerce</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2448,7 +2448,7 @@
     <div id="mediaEntertainmentModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Media / Advertising / Entertainment</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Media Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2465,7 +2465,7 @@
     <div id="legalLawModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Legal / Law Jobs (Private)</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Legal/Law Jobs</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2480,7 +2480,7 @@
     <div id="hospitalityTravelModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Hospitality / Travel / Tourism</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Travel/Tourism</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
@@ -2511,7 +2511,7 @@
     <div id="drivingDeliveryModal" class="modal-overlay">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-4 p-2">
-                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Driving / Delivery / Field Jobs</h3>
+                <h3 class="text-xl font-bold text-golden-dark drop-shadow-md">Driving/Delivery/Field</h3>
                 <button class="modal-close-button" title="Close"><i class="fas fa-times text-2xl"></i></button>
             </div>
             <div class="modal-list">
