--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -388,7 +388,7 @@
     <div class="fixed-header-container">
         <header id="main-header" class="bg-glass-bg-dark/90 backdrop-blur-xl shadow-2xl p-4 fixed top-0 left-0 right-0 z-[100] transition-colors duration-500 border-b-4 border-primary/50">
               <div class="container mx-auto flex justify-between items-center px-2 sm:px-4" style="padding-top: env(safe-area-inset-top);">
-                <a href="index.html" class="flex items-center no-underline transform hover:scale-[1.02] transition-transform duration-300">
+                <a href="main.html" class="flex items-center no-underline transform hover:scale-[1.02] transition-transform duration-300">
                   <img src="ytglogo.png" alt="Your True Guide Logo" class="h-10 w-10 sm:h-12 sm:w-12 mr-3 rounded-full shadow-lg border border-primary/50" onerror="this.onerror=null;this.src='https://placehold.co/48x48/FFD700/1A1C20?text=YTG';" />
                   <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md">
                     UPSC <span class="text-primary">CSE</span>
@@ -1225,6 +1225,7 @@
         </div>
     </div>
 <br>
+    <br>
     <nav 
         class="lg:hidden bottom-nav-fixed" 
         style="padding-bottom: env(safe-area-inset-bottom);" 
@@ -1232,19 +1233,19 @@
     >
         <div class="flex justify-around items-end h-20 relative px-2">
             
-            <a href="index.html#govt-exam-section" class="nav-item-shs">
+            <a href="#govt-exam-section" class="nav-item-shs">
                 <i class="fas fa-building nav-icon-shs"></i>
                 <span class="font-medium">Public</span>
             </a>
 
-            <a href="index.html#private-sector-section" class="nav-item-shs">
+            <a href="#private-sector-section" class="nav-item-shs">
                 <i class="fas fa-briefcase nav-icon-shs"></i>
                 <span class="font-medium">Private</span>
             </a>
             
             <div class="central-nav-item-shs">
                 <a 
-                    href="index.html" 
+                    href="main.html" 
                     class="central-fab animate-pulse-shadow"
                     aria-label="Go to Home"
                 >
