--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
             <!-- Text Content -->
             <div class="flex-1">
-                <h1 class="brand-title">Skilli.</h1>
+                <h1 class="brand-title">STISkilli</h1>
                 <p class="tagline">Your True Guide</p>
                 
                 <div class="progress-wrapper mx-auto lg:mx-0">
