--- a/main.html
+++ b/main.html
@@ -130,7 +130,7 @@
             background-blend-mode: normal;
         }
         #modal-ai .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1497366754035-f200968a6e72?q=80&w=1000'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('allai.png'); 
             background-blend-mode: normal;
         }
         #modal-trending .modal-box { 
