--- a/terms-&-conditions.html
+++ b/terms-&-conditions.html
@@ -1,96 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy, Disclaimer & Description - Crapd.in</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Privacy Policy | CRAPD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background: #f8f8f8;
+            color: #333;
+            padding: 20px;
+        }
+        .container {
+            max-width: 850px;
+            margin: auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 12px rgba(0,0,0,0.05);
+        }
+        h1, h2 {
+            color: #222;
+        }
+        h1 {
+            text-align: center;
+        }
+        p {
+            margin-bottom: 12px;
+        }
+        ul {
+            margin: 10px 0;
+        }
+        a {
+            color: #0066cc;
+        }
+    </style>
 </head>
 <body>
-  <style>
-  /* === Reset & Base === */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
 
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f4f4f8;
-    color: #333;
-    padding: 40px 20px;
-    line-height: 1.6;
-    max-width: 900px;
-    margin: auto;
-  }
+<div class="container">
 
-  /* === Headings === */
-  h1, h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #2a0066;
-    text-align: center;
-  }
+<h1>Privacy Policy</h1>
+<p><strong>Last updated:</strong> January 2026</p>
 
-  h2 {
-    font-size: 1.4rem;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: left;
-    color: #333;
-  }
+<p>Welcome to <strong>https://crapd.in</strong> (“we”, “our”, “us”). This Privacy Policy outlines how we collect, use, disclose and protect your information when you use our website or services—including apps published on the Google Play Store.</p>
 
-  /* === Paragraph & Lists === */
-  p {
-    margin-bottom: 15px;
-    font-size: 1rem;
-  }
+<h2>Information We Collect</h2>
+<p>When you use our services, we may collect the following types of information:</p>
+<ul>
+    <li>Personal data like name, email, phone number (if voluntarily submitted)</li>
+    <li>Usage data (pages visited, times of access, interactions)</li>
+    <li>Device and system information (OS, device model, IP address)</li>
+</ul>
 
-  ul {
-    list-style-type: disc;
-    padding-left: 20px;
-    margin-bottom: 20px;
-  }
+<h2>How We Use Your Information</h2>
+<p>We use collected data to:</p>
+<ul>
+    <li>Provide and maintain services</li>
+    <li>Enhance user experience</li>
+    <li>Respond to support requests</li>
+    <li>Monitor and analyze app usage</li>
+</ul>
 
-  ul li {
-    margin-bottom: 10px;
-  }
+<h2>Sharing of Data</h2>
+<p>We do not sell or rent your personal information. Data may be shared only when required by law, to protect our rights, or with trusted service providers who assist with operations.</p>
 
-  /* === Links === */
-  a {
-    color: #0066cc;
-    text-decoration: none;
-  }
+<h2>Third-Party Services</h2>
+<p>Our services may integrate with third-party tools (such as analytics or hosting services) that may collect information. These services have their own privacy policies which you should review.</p>
 
-  a:hover {
-    text-decoration: underline;
-  }
+<h2>Security of Data</h2>
+<p>We use reasonable technical measures to protect your information. However, no online transmission or storage is 100% secure.</p>
 
-  /* === Responsive === */
-  @media (max-width: 600px) {
-    body {
-      padding: 20px 15px;
-      font-size: 0.95rem;
-    }
+<h2>Children’s Privacy</h2>
+<p>Our services are not directed at children under 13. We do not knowingly collect personal data from children.</p>
 
-    h1 {
-      font-size: 1.5rem;
-    }
-  }
-</style>
+<h2>Your Data Rights</h2>
+<p>You can request access to your personal information or request that it be updated or deleted by contacting us at the email below.</p>
 
-  <h1>Privacy Policy, Disclaimer & Full Description</h1>
+<h2>Changes to This Policy</h2>
+<p>This policy may change over time. Updated versions will be posted on this page with a revised “Last updated” date.</p>
 
-  <h2>About Crapd.in - Your True Guide</h2>
-  <p><strong>Crapd.in - Your True Guide</strong> is an educational app designed to assist users with AI-based career guidance. This app provides comprehensive information on job opportunities,  and multilingual educational notes (in Hindi, English, and Punjabi), helping users in their preparation for various exams and career opportunities.</p>
+<h2>Contact Us</h2>
+<p>If you have questions or concerns about this Privacy Policy, please contact:</p>
+<p>
+<strong>Email:</strong>Shekharinsha944@gmail.com<br>
+<strong>Website:</strong> <a href="https://crapd.in">https://crapd.in</a>
+</p>
 
-  <p>Our primary goal is to provide users with educational content and career guidance. This app is not affiliated with , and its purpose is solely to provide information about  AI-based career opportunities.</p>
-
-  
-  <p>
-    📧 Email: crapdindia@gmail.com <br>
-    🌐 Website: <a href="https://crapd.in" target="_blank">https://crapd.in</a>
-  </p>
+</div>
 
 </body>
 </html>
