--- a/main.html
+++ b/main.html
@@ -472,98 +472,98 @@
     title: "CSE",
     sub: "Civil Services",
     tag: "Grade A",
-    img: "https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html"
   },
   {
     title: "ESE",
     sub: "Engineering Services",
     tag: "Technical",
-    img: "https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-ese-ies-engineering-services-exam.html"
   },
   {
     title: "IFoS",
     sub: "Forest Service",
     tag: "Grade A",
-    img: "https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html"
   },
   {
     title: "CDS",
     sub: "Defence Services",
     tag: "Defence",
-    img: "https://images.unsplash.com/photo-1603878463782-42d1d3d8c7f6?q=80&w=600",
+    img: "upsc.png",
     link: "ups-cds-combined-defence-dervices.html"
   },
   {
     title: "NDA/NA",
     sub: "Defence Academy",
     tag: "Defence",
-    img: "https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-nda-na-services.html"
   },
   {
     title: "CMS",
     sub: "Medical Services",
     tag: "Medical",
-    img: "https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-cms-services.html"
   },
   {
     title: "IES/ISS",
     sub: "Eco & Stats",
     tag: "Specialist",
-    img: "https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-ies-iss-services.html"
   },
   {
     title: "CAPF",
     sub: "Armed Police",
     tag: "Paramilitary",
-    img: "https://images.unsplash.com/photo-1605460375648-278bcbd579a6?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-capf-services.html"
   },
   {
     title: "CGSE",
     sub: "Geo Scientist",
     tag: "Science",
-    img: "https://images.unsplash.com/photo-1581091215367-59ab6c33f8d8?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-cgs-services.html"
   },
   {
     title: "EPFO",
     sub: "EO / AO",
     tag: "Group A/B",
-    img: "https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-epfo-eo-oa-services.html"
   },
   {
     title: "CISF AC",
     sub: "Dept. Exam",
     tag: "Departmental",
-    img: "https://images.unsplash.com/photo-1607227063002-677dc5fdf96f?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-cisf-acexe-ldce-service.html"
   },
   {
     title: "SO/Steno",
     sub: "Secretariat",
     tag: "Departmental",
-    img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-so-steno-grade-b-grade-i-ldce-services.html"
   },
   {
     title: "CBI DSP",
     sub: "Investigation",
     tag: "Departmental",
-    img: "https://images.unsplash.com/photo-1555374018-13a8994ab246?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-cbi-dsp-limited-dept-service.html"
   },
   {
     title: "SCRA",
     sub: "Railway Engg.",
     tag: "Technical",
-    img: "https://images.unsplash.com/photo-1503376780353-7e6692767b70?q=80&w=600",
+    img: "upsc.png",
     link: "upsc-special-class-railway-apprentice-scra-services.html"
   }
 ],
